--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,15 @@
 {
-  "name": "Accidental Likes Preventer",
+  "name": "Accidental Likes Preventer for Facebook",
   "version": "1.0.2",
   "description": "__MSG_chrome_extension_description__",
   "default_locale": "en",
   "icons": {
     "128": "img/icon128.png",
     "256": "img/icon256.png"
+  },
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
   },
   "content_scripts": [
     {
